# OsProject

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: array.h  utils.h
include/core/: data.h  data_impl.h  data_sizes.h  directory.h  file.h  mbr.h  states.h  stream_buf.h  system.h
include/feature/ROM/: ROM.h
include/feature/fat/: bs_system.h
include/feature/inode/: block.h  data_block.h  indirect_blocks.h  inode.h  inode_blocks.h  inode_sizes.h  inode_system.h
include/feature/ui/: command.h  mainwindow.h
lib/: array.h  bs_fat.cpp  bs_file.cpp  bs_system.h  data.h  file.h  hamming.cpp  mbr.h  states.h  system.h  utils.cpp  utils.h  zero_data.h
lib/core/: array.cpp  hamming.cpp
lib/feature/fat/: bs_fat.cpp  bs_file.cpp
lib/feature/inode/: inode.cpp  inode_blocks.cpp  inode_system.cpp
lib/feature/ui/: command.cpp  mainwindow.cpp
src/: main.cpp
